# durable-agent-runtime-lab

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  exp01.py  pyproject.toml
.github/workflows/: deploy-docs.yml
benchmarks/repositories/task-02-feature/: README.md
benchmarks/repositories/task-03-migration/: pyproject.toml
benchmarks/repositories/task-03-migration/src/: models.py
benchmarks/repositories/task-03-migration/tests/: test_models.py
benchmarks/tasks/: task-01.yaml  task-02.yaml  task-03.yaml  task-04.yaml  task-05.yaml  task-06.yaml
data/: dar_state.db  events-06aaae06-3055-4196-a6d1-eb77cd4fc4b9.jsonl  events-20f37dce-cb9a-4058-b4eb-caf1c4ee472c.jsonl  events-4a8dc4ec-1278-4f00-b227-b68300e815f3.jsonl  events-56d4886f-62e3-4d4d-975c-da91f49cb99a.jsonl  events-73a580c0-b1c2-482e-969e-c42c321f4ae3.jsonl  events-7c6f6fe6-8822-4645-bbf1-f1f5905d056f.jsonl  events-935aa913-796a-45eb-b5b8-48c868067ba7.jsonl  events-9b162865-0c55-4808-bbee-04037f41edbc.jsonl  events-a0b3c190-29e9-4832-ad9f-c843a6302e39.jsonl  events-bf6c1de2-9551-4d55-8b7f-a1e89c3723ab.jsonl  events-d69cf30a-3455-487a-ae45-7c289e7e70d2.jsonl  events-ded4a940-c3e3-4666-b44d-a1b93a7198d5.jsonl  events-f2637704-1b70-4041-b070-d3332fd8dfe9.jsonl
data/reports/: experiment-10c651d9.json  experiment-619e475f.json  experiment-6ba41da4.json  experiment-6f443cfc.json  experiment-7ad3ac54.json  experiment-8e014039.json  experiment-96bcdf3d.json  experiment-ab6f4fd3.json  experiment-c00b51c0.json  experiment-c77817d6.json  experiment-d62313a0.json  experiment-e06f6f6a.json
docs/: implementation-plan.md  research-report.md
docs/adr/: 001-sqlite-jsonl-local-state.md  002-git-checkpointing.md  003-jsonl-event-ledger.md  004-provider-neutral-model-interface.md  005-docker-sandboxing.md  006-deterministic-orchestration.md  007-no-vector-database-v1.md  README.md
docs/site/: package.json  pnpm-lock.yaml  svelte.config.js
docs/site/src/: app.css  app.html
docs/site/src/routes/: +page.svelte
experiments/configs/: core.yaml  quickstart.yaml
schemas/: action-proposal.schema.json  checkpoint.schema.json  event.schema.json  execution-result.schema.json  goal.schema.json  plan.schema.json  task.schema.json  verification-result.schema.json
src/durable_agent_runtime/: cli.py
src/durable_agent_runtime/boundary/: service.py
src/durable_agent_runtime/domain/: __init__.py  action.py  checkpoint.py  enums.py  event.py  goal.py  plan.py  schema_gen.py  state_machine.py  task.py
src/durable_agent_runtime/execution/: __init__.py  docker_executor.py  process_executor.py  tool_registry.py
src/durable_agent_runtime/experiments/: baseline.py  durable.py  fault_injection.py  runner.py
src/durable_agent_runtime/models/: __init__.py  base.py  openai_provider.py  prompts.py  router.py
src/durable_agent_runtime/orchestration/: engine.py  scheduler.py
src/durable_agent_runtime/persistence/: database.py  event_store.py  state_store.py
tests/integration/: test_boundary_and_tools.py  test_docker_executor.py  test_e2e_runtime.py  test_human_approval.py  test_multi_task_dag.py
tests/property/: test_model_invariants.py
tests/unit/: test_cli_experiments.py  test_cli_provider.py  test_domain_models.py  test_enums.py  test_event_store.py  test_fault_injection.py  test_model_router.py  test_openai_provider.py  test_orchestrator.py  test_scheduler.py  test_schema_generation.py  test_state_machine.py  test_state_store.py
(+18 files in other folders)
