[project]
name = "durable-agent-runtime"
version = "0.1.0"
description = "Durable Agent Runtime Lab — research platform comparing conventional vs. deterministic agent workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Max Espinoza", email = "me@rmax.io" }]
keywords = [
    "ai-agents",
    "durable-execution",
    "workflow",
    "event-sourcing",
    "agent-runtime",
    "research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "sqlmodel>=0.0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.0",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "mypy>=1.0",
    "coverage>=7.0",
    "docker>=7.0",
    "gitpython>=3.0",
    "httpx>=0.28",
    "opentelemetry-api>=1.0",
    "opentelemetry-sdk>=1.0",
]

[project.scripts]
dar = "durable_agent_runtime.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/durable_agent_runtime"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "N818", # exception class naming
    "B008", # do not perform function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests requiring external services",
    "property: property-based tests",
    "recovery: recovery and restart tests",
    "security: security tests",
    "experiments: experiment framework tests",
    "docker: tests requiring Docker",
    "slow: slow tests",
    "model: tests requiring model access",
]

[tool.coverage.run]
source = ["src/durable_agent_runtime"]
branch = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "class .*\bProtocol\b",
]
